--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -105,6 +105,11 @@ Pos=359,76
 Size=96,126
 Collapsed=0
 
+[Window][Edit Script]
+Pos=21,39
+Size=952,593
+Collapsed=0
+
 [Table][0x47600645,3]
 RefScale=14
 Column 0  Width=48
