--- a/GameEditor/GameEditor.vcxproj.filters
+++ b/GameEditor/GameEditor.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="ResourceTexture.cpp">
       <Filter>Source Files\Resource</Filter>
     </ClCompile>
+    <ClCompile Include="TextEditor.cpp">
+      <Filter>Tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -85,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="ResourceTexture.h">
       <Filter>Header Files\Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="TextEditor.h">
+      <Filter>Tools</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
