Added ScriptingEngine class.
- The class now only calls the mono init in order to begin implementing. Further expansion of the class required.
- Created C# project "ScriptingSandbox"

Co-Authored-By: Jonathan Cacay Llanes <57706173+xGauss05@users.noreply.github.com>

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -213,6 +213,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Physics.hpp" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Pyramid.h" />
+    <ClInclude Include="ScriptingEngine.hpp" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
