--- a/ScriptingSandbox/ScriptingSandbox.csproj
+++ b/ScriptingSandbox/ScriptingSandbox.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpTesting.cs" />
+    <Compile Include="Mondongo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
