--- a/ScriptingSandbox/ScriptingSandbox.csproj
+++ b/ScriptingSandbox/ScriptingSandbox.csproj
@@ -42,8 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpTesting.cs" />
+    <Compile Include="InternalCalls.cs" />
+    <Compile Include="Script Interfaces\IGameObject.cs" />
     <Compile Include="Mondongo.cs" />
+    <Compile Include="MonoBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Script Interfaces\ITransform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
