First implementation of scripting system works.
This is very rough.
- Scripting Engine has been separated into .cpp and .h.
- Street scene loading is commented.
- Right now only updates the last element in the gameobjects list in the scene, and it does not update monobehaviour, but calls the update function in the specific script.
- Script component is not implemented yet.
- Every gameobject generated creates an instance of the ActualScriptTest script.
- GameObject now has a monoBehaviour instance.

Co-Authored-By: Jonathan Cacay Llanes <57706173+xGauss05@users.noreply.github.com>
Co-Authored-By: PauFusco <99730051+PauFusco@users.noreply.github.com>

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -213,7 +213,8 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Physics.hpp" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Pyramid.h" />
-    <ClInclude Include="ScriptingEngine.hpp" />
+    <ClCompile Include="ScriptingEngine.cpp" />
+    <ClInclude Include="ScriptingEngine.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
