--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Engine_ModuleScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScriptingEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEngine.h">
@@ -122,8 +125,8 @@
     <ClInclude Include="Physics.hpp">
       <Filter>Tools</Filter>
     </ClInclude>
-    <ClInclude Include="ScriptingEngine.hpp">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="ScriptingEngine.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
