--- a/ScriptingSandbox/ScriptingSandbox.csproj
+++ b/ScriptingSandbox/ScriptingSandbox.csproj
@@ -43,11 +43,12 @@
   <ItemGroup>
     <Compile Include="CSharpTesting.cs" />
     <Compile Include="InternalCalls.cs" />
-    <Compile Include="Script Interfaces\IGameObject.cs" />
+    <Compile Include="ActualScriptTest.cs" />
+    <Compile Include="IGameObject.cs" />
     <Compile Include="Mondongo.cs" />
     <Compile Include="MonoBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Script Interfaces\ITransform.cs" />
+    <Compile Include="ITransform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
