--- a/ScriptingSandbox/ScriptingSandbox.csproj
+++ b/ScriptingSandbox/ScriptingSandbox.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="CSharpTesting.cs" />
     <Compile Include="InternalCalls.cs" />
-    <Compile Include="ActualScriptTest.cs" />
+    <Compile Include="Scripts\ActualScriptTest.cs" />
     <Compile Include="IGameObject.cs" />
     <Compile Include="Mondongo.cs" />
     <Compile Include="MonoBehaviour.cs" />
