Added multiple script loading support.
Co-Authored-By: Jonathan Cacay Llanes <57706173+xGauss05@users.noreply.github.com>
Co-Authored-By: PauFusco <99730051+PauFusco@users.noreply.github.com>

--- a/ScriptingSandbox/ScriptingSandbox.csproj
+++ b/ScriptingSandbox/ScriptingSandbox.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActualScriptTest2.cs" />
     <Compile Include="CSharpTesting.cs" />
     <Compile Include="InternalCalls.cs" />
     <Compile Include="ActualScriptTest.cs" />
